adding some base styling for some pleasant visuals

--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
     <title>Welcome Ursus to Week 2</title>
   </head>
   <body>
-    <header>
+    <header class="appTopper">
       <h1>Welcome Ursus!!!</h1>
     </header>
 
-    <img src="https://thehill.com/sites/default/files/ca_brownbear_111819_istock.jpg" alt="relaxing bear" />
+    <img class="scaledImg" src="https://thehill.com/sites/default/files/ca_brownbear_111819_istock.jpg" alt="relaxing bear" />
 
     <ul>
       <li>Listed item</li>
