--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
+
+    <link href="styles/style.css" rel="stylesheet" >
     <title>Welcome Ursus to Week 2</title>
   </head>
   <body>
