--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
 
     <link href="styles/style.css" rel="stylesheet" >
+    <script src="scripts/client.js" type="text/javascript"></script>
     <title>Welcome Ursus to Week 2</title>
   </head>
   <body>
